// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should RESULT_UNLIKELY_ERROR onWriteRequest with invalid data 1`] = `
Object {
  "calls": Array [
    Array [
      "onWriteRequest:",
      "
             data: 

                   undefined
      data.length: 0
           offset: 0
  withoutResponse: true
  ",
    ],
  ],
  "instances": Array [
    undefined,
  ],
}
`;

exports[`should RESULT_UNLIKELY_ERROR onWriteRequest with invalid data 2`] = `
Object {
  "calls": Array [
    Array [
      14,
    ],
  ],
  "instances": Array [
    undefined,
  ],
}
`;

exports[`should RESULT_UNLIKELY_ERROR onWriteRequest with invalid offset 1`] = `
Object {
  "calls": Array [
    Array [
      "onWriteRequest:",
      "
             data: 0102030405

                   undefined
      data.length: 5
           offset: 5
  withoutResponse: true
  ",
    ],
  ],
  "instances": Array [
    undefined,
  ],
}
`;

exports[`should RESULT_UNLIKELY_ERROR onWriteRequest with invalid offset 2`] = `
Object {
  "calls": Array [
    Array [
      14,
    ],
  ],
  "instances": Array [
    undefined,
  ],
}
`;

exports[`should RESULT_UNLIKELY_ERROR onWriteRequest withoutResponse 1`] = `
Object {
  "calls": Array [
    Array [
      "onWriteRequest:",
      "
             data: 0102030405

                   undefined
      data.length: 5
           offset: 0
  withoutResponse: false
  ",
    ],
  ],
  "instances": Array [
    undefined,
  ],
}
`;

exports[`should RESULT_UNLIKELY_ERROR onWriteRequest withoutResponse 2`] = `
Object {
  "calls": Array [
    Array [
      14,
    ],
  ],
  "instances": Array [
    undefined,
  ],
}
`;

exports[`should onWriteRequest(validData, 0, true, callback) 1`] = `
Object {
  "calls": Array [
    Array [
      "onWriteRequest:",
      "
             data: 0102030405

                   undefined
      data.length: 5
           offset: 0
  withoutResponse: true
  ",
    ],
    Array [
      "parsedPacket",
      undefined,
    ],
  ],
  "instances": Array [
    undefined,
    undefined,
  ],
}
`;

exports[`should onWriteRequest(validData, 0, true, callback) 2`] = `
Object {
  "calls": Array [],
  "instances": Array [],
}
`;

exports[`should onWriteRequest(validData, 0, true, callback) 3`] = `
Object {
  "calls": Array [
    Array [
      Object {
        "data": Array [
          1,
          2,
          3,
          4,
          5,
        ],
        "type": "Buffer",
      },
    ],
  ],
  "instances": Array [
    undefined,
  ],
}
`;
